syntax = "proto3";

package ethereum.beacon.p2p.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message BeaconState {
  // Versioning [1001-2000]
  uint64 genesis_time = 1001;
  uint64 slot = 1002;
  Fork fork = 1003;

  // History [2001-3000]
  BeaconBlockHeader latest_block_header = 2001;
  repeated bytes block_roots = 2002 [(gogoproto.moretags) = "ssz-size:\"8192,32\""];
  repeated bytes state_roots = 2003 [(gogoproto.moretags) = "ssz-size:\"8192,32\""];
  repeated bytes historical_roots = 2004 [(gogoproto.moretags) = "ssz-size:\"?,32\" ssz-max:\"16777216\""];

  // Eth1 [3001-4000]
  Eth1Data eth1_data = 3001;
  repeated Eth1Data eth1_data_votes = 3002 [(gogoproto.moretags) = "ssz-max:\"1024\""];
  uint64 eth1_deposit_index = 3003;

  // Registry [4001-5000]
  repeated Validator validators = 4001 [(gogoproto.moretags) = "ssz-max:\"1099511627776\""];
  repeated uint64 balances = 4002 [(gogoproto.moretags) = "ssz-max:\"1099511627776\""];

  // Shuffling [5001-6000]
  uint64 start_shard = 5001;
  repeated bytes randao_mixes = 5002 [(gogoproto.moretags) = "ssz-size:\"65536,32\""];
  repeated bytes active_index_roots = 5003 [(gogoproto.moretags) = "ssz-size:\"65536,32\""];
  repeated bytes compact_committees_roots = 5004 [(gogoproto.moretags) = "ssz-size:\"65536,32\""];

  // Slashings [6001-7000]
  repeated uint64 slashings = 6001 [(gogoproto.moretags) = "ssz-size:\"8192\""];

  // Attestations [7001-8000]
  repeated PendingAttestation previous_epoch_attestations = 7001 [(gogoproto.moretags) = "ssz-max:\"8192\""];
  repeated PendingAttestation current_epoch_attestations = 7002 [(gogoproto.moretags) = "ssz-max:\"8192\""];

  // Crosslinks [8001-9000]
  repeated Crosslink previous_crosslinks = 8001 [(gogoproto.moretags) = "ssz-size:\"1024\""];
  repeated Crosslink current_crosslinks = 8002 [(gogoproto.moretags) = "ssz-size:\"1024\""];

  // Finality [9001-10000]
  // Spec type [4]Bitvector which means this would be a fixed size of 4 bits.
  bytes justification_bits = 9001 [(gogoproto.moretags) = "ssz-size:\"1\"", (gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitvector4"];
  Checkpoint previous_justified_checkpoint = 9002;
  Checkpoint current_justified_checkpoint = 9003;
  Checkpoint finalized_checkpoint = 9004;
}

message Fork {
  bytes previous_version = 1 [(gogoproto.moretags) = "ssz-size:\"4\""];
  bytes current_version = 2 [(gogoproto.moretags) = "ssz-size:\"4\""];
  uint64 epoch = 3;
}

message PendingAttestation {
  // Bitfield representation of validator indices that have voted exactly
  // the same vote and have been aggregated into this attestation.
  bytes aggregation_bits = 1 [(gogoproto.moretags) = "ssz-max:\"4096\"", (gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitlist"];
  AttestationData data = 2;
  // The difference of when attestation gets created and get included on chain.
  uint64 inclusion_delay = 3;
  // The proposer who included the attestation in the block.
  uint64 proposer_index = 4;
}

message Attestation {
  // Bitfield representation of validator indices that have voted exactly
  // the same vote and have been aggregated into this attestation.
  // Spec type: Bitlist[4096]
  bytes aggregation_bits = 1 [(gogoproto.moretags) = "ssz-max:\"4096\"", (gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitlist"];
  AttestationData data = 2;
  // Challengeable bit (SSZ-bool, 1 byte) for the custody of crosslink data. Not used in phase 0.
  bytes custody_bits = 3 [(gogoproto.moretags) = "ssz-max:\"4096\"", (gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitlist"];
  // 96 byte BLS aggregate signature.
  bytes signature = 4 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message Checkpoint {
  // The Epoch of when the check point happens.
  uint64 epoch = 1;
  // The block root of when the check point happens.
  bytes root = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
}

message AttestationData {
  // 32 byte root of the LMD GHOST block vote.
  bytes beacon_block_root = 1 [(gogoproto.moretags) = "ssz-size:\"32\""];

  // Casper Friendly Finality Gadget to check point beacon chain
  // for justification and finalization.
  Checkpoint source = 2;
  Checkpoint target = 3;

  // Crosslink voted by this attestation.
  Crosslink crosslink = 4;
}

message AttestationTarget {
  // Used internally to track LMD GHOST block votes and to find
  // the head of the chain.
  uint64 slot = 1;
  bytes block_root = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  bytes parent_root = 3 [(gogoproto.moretags) = "ssz-size:\"32\""];
}

message AttestationDataAndCustodyBit {
  AttestationData data = 1;
  // Challengeable bit (SSZ-bool, 1 byte) for the custody of crosslink data
  bool custody_bit = 2;
}

message IndexedAttestation {
  // Validator indices
  repeated uint64 custody_bit_0_indices = 1 [(gogoproto.moretags) = "ssz-max:\"4096\""];
  repeated uint64 custody_bit_1_indices = 2 [(gogoproto.moretags) = "ssz-max:\"4096\""];
  AttestationData data = 3;
  // 96 bytes aggregate signature.
  bytes signature = 4 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message Validator {
  // 96 byte BLS public key used for the validator's activities.
  bytes pubkey = 1 [(gogoproto.moretags) = "ssz-size:\"48\""];
  // 32 byte hash of the withdrawal destination public key.
  bytes withdrawal_credentials = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // The validators current effective balance in gwei.
  uint64 effective_balance = 3;
  // Whether or not the validator has been slashed.
  bool slashed = 4;
  // Epoch when the validator became eligible for activation. This field may
  // be zero if the validator was present in the Ethereum 2.0 genesis.
  uint64 activation_eligibility_epoch = 5;
  // Epoch when the validator was activated. This field may be zero if the
  // validator was present in the Ethereum 2.0 genesis.
  uint64 activation_epoch = 6;
  // Epoch when the validator was exited. This field may be zero if the
  // validator has not exited.
  uint64 exit_epoch = 7;
  // Epoch when the validator is eligible to withdraw their funds. This field
  // may be zero if the validator has not exited.
  uint64 withdrawable_epoch = 8;
}

message Crosslink {
  // The shard that crosslinks to the beacon chain.
  uint64 shard = 1;
  // 32 byte root of the parent crosslink.
  bytes parent_root = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // Start epoch must match the parent crosslink's end epoch.
  uint64 start_epoch = 3;
  // Ending epoch for this crosslink period. This field matches the attestation
  // target epoch or the start epoch + MAX_EPOCHS_PER_CROSSLINK, whichever is
  // less.
  uint64 end_epoch = 4;
  // 32 byte root of the crosslinked shard data since the previous crosslink.
  bytes data_root = 5 [(gogoproto.moretags) = "ssz-size:\"32\""];
}

message BeaconBlockHeader {
  // Beacon chain slot that this block represents.
  uint64 slot = 1;
  // 32 byte merkle tree root of the parent ssz encoded block.
  bytes parent_root = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // 32 byte merkle tree root of the resulting ssz encoded state after processing this block.
  bytes state_root = 3 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // 32 byte merkle tree root of the ssz encoded block body.
  bytes body_root = 4 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // 96 byte BLS signature from the validator that produced this block.
  bytes signature = 5 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message BeaconBlock {
  // Beacon chain slot that this block represents.
  uint64 slot = 1;
  // 32 byte root of the parent block.
  bytes parent_root = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // 32 byte root of the resulting state after processing this block.
  bytes state_root = 3 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // The block body itself.
  BeaconBlockBody body = 4;
  // 96 byte BLS signature from the validator that produced this block.
  bytes signature = 5 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message BeaconBlockBody {
  // The validators RANDAO reveal 96 byte value.
  bytes randao_reveal = 1 [(gogoproto.moretags) = "ssz-size:\"96\""];
  // A reference to the Ethereum 1.x chain.
  Eth1Data eth1_data = 2;
  // 32 byte field of arbitrary data. This field may contain any data and
  // is not used for anything other than a fun message.
  bytes graffiti = 3 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // At most MAX_PROPOSER_SLASHINGS.
  repeated ProposerSlashing proposer_slashings  = 4 [(gogoproto.moretags) = "ssz-max:\"16\""];
  // At most MAX_ATTESTER_SLASHINGS.
  repeated AttesterSlashing attester_slashings = 5 [(gogoproto.moretags) = "ssz-max:\"1\""];
  // At most MAX_ATTESTATIONS.
  repeated Attestation attestations = 6 [(gogoproto.moretags) = "ssz-max:\"128\""];
  // At most MAX_DEPOSITS.
  repeated Deposit deposits = 7 [(gogoproto.moretags) = "ssz-max:\"16\""];
  // At most MAX_VOLUNTARY_EXITS.
  repeated VoluntaryExit voluntary_exits = 8 [(gogoproto.moretags) = "ssz-max:\"16\""];
  // At most MAX_TRANSFERS.
  repeated Transfer transfers = 9 [(gogoproto.moretags) = "ssz-max:\"0\""];
}

message DepositData {
  // 48 byte BLS public key of the validator.
  bytes pubkey = 1 [(gogoproto.moretags) = "ssz-size:\"48\""];
  // A 32 byte hash of the withdrawal address public key.
  bytes withdrawal_credentials = 2 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // Deposit amount in gwei.
  uint64 amount = 3;
  // 96 byte signature from the validators public key.
  bytes signature = 4 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message ProposerSlashing {
  // Validator index of the validator that proposed the two conflicting block
  // headers.
  uint64 proposer_index = 1;
  // First conflicting block header.
  BeaconBlockHeader header_1 = 2;
  // Second conflicting block header.
  BeaconBlockHeader header_2 = 3;
}

message AttesterSlashing {
  // First conflicting attestation.
  IndexedAttestation attestation_1 = 1;
  // Second conflicting attestation.
  IndexedAttestation attestation_2 = 2;
}

message Deposit {
  // 32 byte roots in the deposit tree branch.
  repeated bytes proof = 1 [(gogoproto.moretags) = "ssz-size:\"33,32\""];
  DepositData data = 3;
}

message VoluntaryExit {
  // The epoch on when exit request becomes valid.
  uint64 epoch = 1;
  // Index of the exiting validator.
  uint64 validator_index = 2;
  // Validator's 96 byte signature
  bytes signature = 3 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message Transfer {
  // Validator index of the sender.
  uint64 sender = 1;
  // Validator index of the recipient.
  uint64 recipient = 2;
  // Amount in gwei sent to the recipient.
  uint64 amount = 3;
  // Fee in gwei for the block proposer to include this transfer.
  uint64 fee = 4;
  // Slot at which transfer must be processed. This is used for replay protection.
  uint64 slot = 5;
  // 48 byte sender's withdrawal public key.
  bytes pubkey = 6 [(gogoproto.moretags) = "ssz-size:\"48\""];
  // 96 byte signature from the sender's withdrawal key.
  bytes signature = 7 [(gogoproto.moretags) = "ssz-size:\"96\""];
}

message Eth1Data {
  // The 32 byte deposit tree root for the last deposit included in this
  // block.
  bytes deposit_root = 1 [(gogoproto.moretags) = "ssz-size:\"32\""];
  // The total number of deposits included in the beacon chain since genesis
  // including the deposits in this block.
  uint64 deposit_count = 2;
  // The 32 byte block hash of the Ethereum 1.x block considered for deposit
  // inclusion.
  bytes block_hash = 3 [(gogoproto.moretags) = "ssz-size:\"32\""];
}

message Eth1DataVote {
  Eth1Data eth1_data = 1;
  // The total vote count of the Eth1DataVote.
  uint64 vote_count = 2;
}

message HistoricalBatch {
  repeated bytes block_roots = 1 [(gogoproto.moretags) = "ssz-size:\"8192,32\""];
  repeated bytes state_roots = 2 [(gogoproto.moretags) = "ssz-size:\"8192,32\""];
}

message CompactCommittee {
  // The list of the validator public keys in the committee.
  repeated bytes pubkeys = 1 [(gogoproto.moretags) = "ssz-size:\"?,48\" ssz-max:\"4096\""];
  // The list of the validator indices in the committee.
  repeated uint64 compact_validators = 2 [(gogoproto.moretags) = "ssz-max:\"4096\""];
}
